[gd_scene load_steps=3 format=3 uid="uid://c4r2alp7dkopp"]

[ext_resource type="Script" uid="uid://b56h84hopst1f" path="res://src/gui/titleScreen/titleScreen.gd" id="1_wjd3i"]
[ext_resource type="Theme" uid="uid://bbvixcv2opc1q" path="res://src/resources/themes/gameTheme.tres" id="2_ihltr"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wjd3i")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ihltr")
theme_override_font_sizes/font_size = 32
text = "Planeswalker"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("2_ihltr")

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_top = 36
theme_override_constants/margin_bottom = 26

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="TitleScreenEnter" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("2_ihltr")
text = "Enter"

[node name="TitleScreenSettings" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_ihltr")
text = "Settings"

[node name="TitleScreenQuit" type="Button" parent="MarginContainer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_ihltr")
text = "Quit"

[connection signal="pressed" from="MarginContainer/Control/MarginContainer/VBoxContainer/TitleScreenEnter" to="." method="_on_title_screen_enter_pressed"]
[connection signal="pressed" from="MarginContainer/Control/MarginContainer/VBoxContainer/TitleScreenSettings" to="." method="_on_title_screen_settings_pressed"]
[connection signal="pressed" from="MarginContainer/Control/MarginContainer/VBoxContainer/TitleScreenQuit" to="." method="_on_title_screen_quit_pressed"]
